[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/tiles.png" type="Texture" id=1]
[ext_resource path="res://sprites/cart.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/hatch.png" type="Texture" id=3]
[ext_resource path="res://scripts/cart_controller.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 33, 2.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 12 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 16, 64, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 64, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 48, 64, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 64, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 0, 80, 64, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 0, 96, 64, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 0, 112, 64, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 64, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 0, 144, 64, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 0, 160, 64, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 0, 176, 64, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 0, 192, 64, 16 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": false,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="Animation" id=20]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("cart_holder:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "move_down"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("cart_holder:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 45 ), Vector2( 0, 45 ) ]
}

[node name="CartController" type="StaticBody2D"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 32, -0.5 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 64, -11 )
shape = SubResource( 5 )

[node name="control_console" type="Node2D" parent="."]

[node name="sprite" type="Sprite" parent="control_console"]
position = Vector2( 60, -11 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 64, 112, 16, 32 )

[node name="control_lamp" type="Sprite" parent="control_console"]
visible = false
position = Vector2( 60, -19 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 80, 128, 16, 16 )

[node name="blink" type="AnimationPlayer" parent="control_console/control_lamp"]
unique_name_in_owner = true
anims/RESET = SubResource( 3 )
anims/blink = SubResource( 4 )

[node name="hatch" type="AnimatedSprite" parent="."]
unique_name_in_owner = true
position = Vector2( -6, -9 )
frames = SubResource( 19 )
centered = false

[node name="cart_holder" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="cart" parent="cart_holder" instance=ExtResource( 2 )]

[node name="hatch_mask" type="Sprite" parent="."]
position = Vector2( 25, 24 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 11, 147, 52, 45 )

[node name="cart_animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 20 )
anims/move_down = SubResource( 21 )
